--- a/Colored_Markers/index.html
+++ b/Colored_Markers/index.html
@@ -1,22 +1,24 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colored Markers</title>
-    <link rel="stylesheet" href="styles.css">
+    <!-- Meta tags for character set and viewport settings -->
   </head>
   <body>
+    <!-- Header with the project title -->
     <h1>CSS Color Markers</h1>
+
+    <!-- Container to hold the colored markers -->
     <div class="container">
+      <!-- Red marker -->
       <div class="marker red">
         <div class="cap"></div>
         <div class="sleeve"></div>
       </div>
+      <!-- Green marker -->
       <div class="marker green">
         <div class="cap"></div>
         <div class="sleeve"></div>
       </div>
+      <!-- Blue marker -->
       <div class="marker blue">
         <div class="cap"></div>
         <div class="sleeve"></div>
