--- a/English_Survey_Form_Project/index.html
+++ b/English_Survey_Form_Project/index.html
@@ -42,17 +42,17 @@
     <div class="radio-options">  
       <p>Tell us about your EF score</p>
       <label for="radio-A1">
-        <input name="radio" id="radio-A1" type="radio" value="A1"checked/>A1</label>
+        <input name="radio_equal_name_for_only_selection" id="radio-A1" type="radio" value="A1"checked/>A1</label>
       <label for="radio-A2">
-        <input name="radio" id="radio-A2" type="radio" value="A2"/>A2</label>
+        <input name="radio_equal_name_for_only_selection" id="radio-A2" type="radio" value="A2"/>A2</label>
       <label for="radio-B1">
-        <input name="radio" id="radio-B1" type="radio" value="B1"/>B1</label>
+        <input name="radio_equal_name_for_only_selection" id="radio-B1" type="radio" value="B1"/>B1</label>
       <label for="radio-B2">
-        <input name="radio" id="radio-B2" type="radio" value="B2"/>B2</label>
+        <input name="radio_equal_name_for_only_selection" id="radio-B2" type="radio" value="B2"/>B2</label>
       <label for="radio-C1">
-        <input name="radio" id="radio-C1" type="radio" value="C1"/>C1</label>
+        <input name="radio_equal_name_for_only_selection" id="radio-C1" type="radio" value="C1"/>C1</label>
       <label for="radio-C2">
-        <input name="radio" id="radio-C2" type="radio" value="C2"/>C2</label>
+        <input name="radio_equal_name_for_only_selection" id="radio-C2" type="radio" value="C2"/>C2</label>
     </div>
     </fieldset>
 
